--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,6 +8,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+
       - uses: amondnet/vercel-action@v19
         id: vercel-action-dev
         with:
