--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -1,8 +1,7 @@
-name: test
+name: prod-release
 on:
-  push:
-    branches:
-      - branch/test
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -18,3 +17,4 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-args: '--prod'
