--- a/.github/workflows/staging-push.yml
+++ b/.github/workflows/staging-push.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/setup-node@v2
 
       - uses: amondnet/vercel-action@v19
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          alias-domains: staging.oleksandrdemian.tech
+        name: Run deploy to vercel
+        run: npx vercel -t ${{ secrets.VERCEL_TOKEN }}
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
