--- a/.github/workflows/staging-push.yml
+++ b/.github/workflows/staging-push.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
 
-      - uses: amondnet/vercel-action@v19
-        name: Run deploy to vercel
+      - name: Run deploy to vercel
         run: npx vercel -t ${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
