--- a/.github/workflows/staging-push.yml
+++ b/.github/workflows/staging-push.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-node@v2
 
       - name: Run deploy to vercel
-        run: npx vercel -t ${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel -t ${{ secrets.VERCEL_TOKEN }} --prod
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
